--- a/games/index.html
+++ b/games/index.html
@@ -45,6 +45,9 @@
                     </div>
                 </div>
             </div>
+            <div class="image">
+                <img src="cartoon.png">
+            </div>
         </section>
     </body>
 </html>
